[package]
name = "golden-god-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.7.1"
dotenv = "0.15.0"
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model"]